# llm-scaler

./: .gitignore  LUNAR_LAKE_COMPATIBILITY.md  README.md  Releases.md  TODO.md
.github/workflows/: codeql.yml
benchmarks/: qwen3-asr-benchmark-2026-03-27.md  vllm-benchmark-2026-03-27.md
issues/: bug-h-intel-report.md  glm4-mla-xpu-bugs.md  glm4-moe-xpu-bugs-and-fixes.md  glm4_moe_lite_int4_xpu_marlin_shuffle.md  pr-32899-comment-draft.md  pr-40128-comment-draft.md  pr-xpu-integrated-gpu-body.md  vllm-30359-comment.md  vllm-v19-lunar-lake-findings.md
omni/: .dockerignore  README.md  build.sh  extension_comfyui_slk_joy_caption_two.patch  init_conda_env.bat  init_conda_env.sh
omni/ComfyUI-OmniXPU/: README.md  __init__.py  config.py  probe.py
omni/Wan2.2/: local_build.sh
omni/benchmarks/: benchmark_t2i_xinference_openai_api.py  benchmark_t2v_comfyui.py
omni/comfyui_windows_setup/: README.md  setup_portable_env.bat
omni/docker/: .dockerignore  Dockerfile  Dockerfile-extension  Dockerfile.full
omni/docs/: COMFYUI.md  ComfyUI_Guide.md  ComfyUI_Guide_CN.md  IMAGE_BUILD.md  SGLang_Diffusion_ComfyUI_Guide.md  (+1 more)
omni/omni_xpu_kernel/: .gitignore  CHANGELOG.md  README.md  WHL_BUILD_INSTALL.md  pyproject.toml  setup.py
omni/omni_xpu_kernel/benchmarks/: README.md  __init__.py  bench_fp8.py  bench_gguf.py  bench_int8.py  bench_ltx2.py  bench_norm.py  bench_qwen_hd128.py  bench_sdp.py  bench_sdp_hd64_bf16.py  run_all.py
omni/omni_xpu_kernel/omni_xpu_kernel/: __init__.py  _version.py
omni/omni_xpu_kernel/omni_xpu_kernel/csrc/: adaln.cpp  bindings.cpp  convrot.cpp  fp8_dequant_esimd.cpp  fp8_quant.cpp  gguf_dequant.cpp  int8_convrot_dequant_esimd.cpp  int8_convrot_quant_esimd.cpp  int8_dequantize_esimd.cpp  int8_quantize_esimd.cpp  int8_scaleback_esimd.cpp  int8_tensorwise_sycl.cpp  kitchen_rope.cpp  kitchen_rope_sycl.cpp  norm.cpp  onednn_fp8.cpp  onednn_int4_gemm.cpp  onednn_int8.cpp  rotary.cpp  sdp.cpp  sdp_kernels.h  svdq_dequant.cpp  svdq_fused_postproc.cpp  utils.h
omni/omni_xpu_kernel/omni_xpu_kernel/cute/: __init__.py  cute_fmha_config.h  cute_fmha_torch.cpp
omni/omni_xpu_kernel/omni_xpu_kernel/fp8/: __init__.py
omni/omni_xpu_kernel/omni_xpu_kernel/gguf/: __init__.py
omni/omni_xpu_kernel/omni_xpu_kernel/int8/: __init__.py  _reference.py
omni/omni_xpu_kernel/omni_xpu_kernel/lgrf_uni/: sdp_config.h  sdp_kernels.cpp
omni/omni_xpu_kernel/omni_xpu_kernel/lgrf_uni/single_kernels/: flash.attn.b.mha.bf16io.fp32accum.h  flash.attn.b.mha.bf16io.opt.h  flash.attn.b.mha.fp16.opt.h  flash.attn.b.mha128.bf16io.h  flash.attn.b.mha128.fp16.opt.h
omni/omni_xpu_kernel/omni_xpu_kernel/linear/: __init__.py
omni/omni_xpu_kernel/omni_xpu_kernel/norm/: __init__.py
omni/omni_xpu_kernel/omni_xpu_kernel/ops/: __init__.py
omni/omni_xpu_kernel/omni_xpu_kernel/rotary/: __init__.py
omni/omni_xpu_kernel/omni_xpu_kernel/sdp/: __init__.py
omni/omni_xpu_kernel/omni_xpu_kernel/svdq/: __init__.py
omni/omni_xpu_kernel/scripts/: build.bat  build.sh  build_llm_scaler_conda.cmd  install.bat
omni/omni_xpu_kernel/tests/: bench_int8.py  bench_ltx2.py  bench_qwen_hd128.py  bench_sdp_hd64_bf16.py  test_cute_d120_correctness.py  test_fp8_correctness.py  test_fp8_negative_cache.py  test_fused_adaln.py  test_gguf_correctness.py  test_int8_correctness.py  test_kitchen_fp8.py  test_kitchen_rope.py  test_native_convrot.py  test_norm_correctness.py  test_package_api.py  test_packaging.py  test_sdp_benchmark_cases.py  test_sdp_correctness.py  test_streams.py  test_svdq_correctness.py  test_svdq_unsigned.py  verify_kv_pad.py
omni/omni_xpu_kernel/tests/benchmarks/: __init__.py  bench_fp8.py  bench_gguf.py  bench_norm.py  bench_sdp.py  run_all.py
scripts/: fix_glm4_mla.sh
sgl/: Dockerfile  README.md
sglang/: Dockerfile  README.md
test/: .gitignore
vllm/: KNOWN_ISSUES.md  README.md  build-docker.sh  dots_ocr.patch
vllm/OCR/: README.md
vllm/moe_prefill_int4/: CMakeLists.txt  __init__.py  moe_prefill.py  test_moe_prefill.py
vllm/moe_prefill_int4/csrc/: cutlass_app_include  cutlass_include  cutlass_tools_include  grouped_gemm_interface.cpp  grouped_gemm_interface.h  moe_forward_fused.cpp
vllm/moe_prefill_int4/csrc/xe_2/: gemm_xe2.hpp  grouped_gemm_xe2.cpp  grouped_gemm_xe2.h  grouped_gemm_xe2.hpp  grouped_gemm_xe2_interface.hpp
vllm/moe_prefill_int4/tests/: bench_layout_comparison.py  debug_kmajor.py  debug_nibble.py  debug_unshuffle.py  test_gemm_marlin_format.py  test_marlin_to_nmajor.py  test_shuffle_invariance.py
(+377 files in other folders)
