[build-system]
requires = [
    "setuptools>=45",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "omni_xpu_kernel"
dynamic = ["version", "dependencies"]
description = "High-performance Intel XPU kernels for PyTorch"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Intel"}
]
keywords = ["intel", "xpu", "sycl", "esimd", "pytorch", "gpu", "kernels", "quantization", "gguf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
[project.optional-dependencies]
dev = [
    "pytest",
    "numpy",
]

[tool.setuptools.packages.find]
exclude = ["tests*", "scripts*"]
